--- a/app/views/events/images.html.erb
+++ b/app/views/events/images.html.erb
@@ -1,3 +1,12 @@
 <% @images.each do |image| %>
-        <%= image_tag(image.url) %>
+ <%= link_to image_tag( image.url, :height => '120', :weight => '160'),image.url,  {:class => 'fancybox-group', rel: "group1"} %>
 <% end %>
+
+<script>
+$("a.fancybox-group").fancybox({
+		'transitionIn'	:	'elastic',
+		'transitionOut'	:	'elastic',
+		'speedIn'		:	600, 
+		'speedOut'		:	200, 
+		'overlayShow'	:	false
+	});</script>
