--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -11,7 +11,7 @@
 							<span class="title-2">Upcoming <span class="highlight-1">Events</span></span>
 						</div>
 						<div class="about-box-content">
-						<p class="about-box-content">
+						<div class="about-box-content">
 <table class="table table-striped table-bordered table-condensed">
   <tr>
     <th>Title</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -19,24 +19,21 @@
     <th>Venue</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <th>Event start date</th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <th>Event end date</th>
-    <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @events.each do |event| %>
   <tr>
     <td><%= event.title %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <td><%= event.description %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <td><%= event.venue %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <td><%= event.event_start_date %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <td><%= event.event_end_date %></td>
+    <td><%= raw(event.description) %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <td><%= "#{event.address.city} #{event.address.state}" if event.address %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <td><%= event.event_start_date.strftime("%b %d,%Y") %></td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <td><%= event.event_end_date.strftime("%b %d,%Y") %></td>
 
   </tr>
 <% end %>
 </table>
 
-						</p>
+						</div>
 
 						</div>
 					</div>
@@ -49,4 +46,18 @@
 
 	
 	<%= render partial: "layouts/footer"%>
+
+	<script>
+   $(document).ready(function(){
+   $('p img').parent().hide();
+   $('p object').parent().hide();
+
+   });
+
+</script>
+
+<style>
+p { display : inline; }
+
+</style>
 
