--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,7 +6,7 @@
       <div class="content-section">
       <h2 class="title">Dashboard</h2>
               <div class="row">
-          <div class="col-md-22 col-md-offset-1" style="padding-left:17px;">
+          <div class="col-md-22" style="padding-left:17px;">
             <table class="table table-striped box-border">
               <thead class="box-head">
                   <tr>
@@ -118,17 +118,13 @@
         </div> <!-- Row closing -->   
         
         <div class="row">
-          <div class="col-md-22 col-md-offset-1" style="padding-left:17px;">
+          <div class="col-md-22" style="padding-left:17px;">
             <table class="table table-striped box-border">
               <thead class="box-head">
                   <tr><td><strong style="color:#c16429;">Event Media</strong></td></tr>
               </thead>
               <tbody>
-                <tr><td>
-                <button type=" " class="btn btn-default">Upload Pictures</button>
-                <button type=" " class="btn btn-default">Upload Video</button>
-                <button type=" " class="btn btn-default">Upload Audio</button>
-                </td></tr>
+      
                 <tr><td><strong>Existing Media</strong></td></tr>
                 <tr>
                   
