--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require jquery.ui.theme
  *= require dataTables/src/demo_table_jui
  *= require bootstrap_and_overrides
- *= require home/bootstrap
+ *= require bootstrap-datetimepicker
+ *= require fancybox
  *= require home/mainpage/main-index
  */
