--- a/app/assets/stylesheets/home/mainpage/main-index.css
+++ b/app/assets/stylesheets/home/mainpage/main-index.css
@@ -34,7 +34,7 @@ float:right;
 
 /*------------ Top Nav ---------------------*/
 .main-nav{
-margin:4px 0 0 0;
+margin:20px 0 0 0;
 float:right;
  }
 .main-nav ul{
@@ -42,7 +42,8 @@ padding:0;
  }
 
 .main-nav ul li{
-padding:14px 10px 14px 10px;
+padding:14px 10px;
+margin-top:5px;
 list-style:none;
 color:#84d4f0;
 font-size:17px;
