--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,6 @@
 
+    <%= javascript_include_tag "bootstrap.min" %>
+    <%= javascript_include_tag "bootstrap-datepicker.min" %>
 
 <%= render partial: "layouts/dash_board/sidebar_top"%>
 
