--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -148,7 +148,10 @@
     
         </div> <!-- Row closing -->   
 
-     
+     <script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<script type="text/javascript" src="/fancybox/jquery.easing-1.4.pack.js"></script>
+<script type="text/javascript" src="/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
+<link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
 
 
      <%= render partial: "layouts/dash_board/sidebar_bottom"%>
