--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,8 @@
 
 <%= render partial: "layouts/dash_board/sidebar_top"%>
 
+<%= stylesheet_link_tag "fancybox" %>
+<%= javascript_include_tag "fancybox" %>
 
     <div class="col-custom-md-21">
       <div class="content-section">
