--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,10 +2,10 @@
 <%= stylesheet_link_tag "home/mainpage/main-index" %>
 
 
-<script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-<script type="text/javascript" src="/fancybox/jquery.easing-1.4.pack.js"></script>
-<script type="text/javascript" src="/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
-<link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+<%= stylesheet_link_tag "fancybox" %>
+
+  <%= javascript_include_tag "fancybox" %>
+  
   <% if @user %>
   
   <% @user.errors.full_messages.each do |msg,name| %>
